role and become a seller